--- a/sass/components/_dialog.scss
+++ b/sass/components/_dialog.scss
@@ -28,6 +28,8 @@ dialog {
         text-transform: capitalize;
         padding: 0.125rem;
         margin: 2rem 0;
+        cursor: pointer;
+        
     }
 
     h3 {
