--- a/sass/components/_dialog.scss
+++ b/sass/components/_dialog.scss
@@ -8,7 +8,7 @@ dialog {
     padding: 1rem;
     color: abstracts.$overlay-blue-light;
     border-radius: 0.25rem;
-    background: linear-gradient(-30deg, #ddd, #fff 60%);
+    background: radial-gradient( #f4f4f4, #fff 50%);
     
     @include abstracts.sm {
         max-width: 500px;
