--- a/css/style.css
+++ b/css/style.css
@@ -647,7 +647,12 @@ form button:hover::after {
   justify-content: center;
   border-radius: 50%;
   isolation: isolate;
-  transition: 0.25s ease;
+  transition: 250ms ease;
+}
+@media (min-width: 576px) {
+  .hamburger {
+    cursor: pointer;
+  }
 }
 .hamburger.hamburger:after, .hamburger.hamburger:before {
   position: absolute;
@@ -662,7 +667,7 @@ form button:hover::after {
 .hamburger.hamburger:before {
   border: 1px solid #b3c0cc;
   opacity: 0;
-  animation: ham-pulse 2.5s ease infinite;
+  animation: ham-pulse 2500ms ease infinite;
 }
 @keyframes ham-pulse {
   50% {
@@ -1536,7 +1541,6 @@ form button:hover::after {
     color: #b3c0cc;
     color: #f4f4f4;
     border-bottom: 1px solid #475462;
-    border-bottom: 1px solid #dc143c8c;
   }
   #nav .nav-list .links-container ul li a.active .icon {
     opacity: 1;
