--- a/sass/components/_menu-toggle.scss
+++ b/sass/components/_menu-toggle.scss
@@ -14,7 +14,11 @@
     
     border-radius: 50%;
     isolation: isolate;
-    transition: .25s ease;
+    transition: 250ms ease;
+
+    @include abstracts.sm {
+        cursor: pointer;
+    }
 
     // PULSE = PSEUDO RADIUS WITH ANIMATION
     &.hamburger:after,
@@ -32,7 +36,7 @@
     &.hamburger:before {
         border: 1px solid abstracts.$brand;
         opacity: 0;
-        animation: ham-pulse 2.5s ease infinite;
+        animation: ham-pulse 2500ms ease infinite;
         // PULSE KEYFRAMES
         @keyframes ham-pulse {
             50% {
