--- a/sass/layout/_skills.scss
+++ b/sass/layout/_skills.scss
@@ -1,8 +1,18 @@
 @use '../abstracts';
 // SKILLS SECTION
 .skills-section {
-    // border: 3px solid red;
-    padding: 10vh 0 0;
+    padding: 10vh 0 5vh;
+    background: #fff;
+    // background: linear-gradient(140deg, #ff0000 50%, hsl(0, 0%, 92.5%) 60%);
+    background: linear-gradient(140deg, #fff 60%, hsl(0, 0%, 92.5%) 70%);
+    background: linear-gradient(0deg, hsl(0, 0%, 92.5%) 30%, #fff);
+    background: linear-gradient(25deg, red 25%, #0000ff 50%);
+    background: linear-gradient(25deg, #ececec 28%, #fff 45%);
+
+    // DESKTOP BACKGROUND
+    @include abstracts.md {
+        background: linear-gradient(0deg, hsl(0, 0%, 92.5%) 10%, #fff 20%);
+    }
 
     .skills-header {
         // border: 2px solid red;
@@ -53,19 +63,19 @@
                     }
 
                     // DEPTH EFFECT
-                    &::after {
-                        content: '';
-                        position: absolute;
-                        inset: 0;
-                        left: 10%;
-                        top: 10%;
-                        width: 15rem;
-                        height: 15rem;
-                        background: radial-gradient(hsl(211, 16%, 94%) , #fff);
-                        filter: blur(30px);
-                        border-radius: 50%;
-                        z-index: -1;
-                    }
+                    // &::after {
+                    //     content: '';
+                    //     position: absolute;
+                    //     inset: 0;
+                    //     left: 10%;
+                    //     top: 10%;
+                    //     width: 15rem;
+                    //     height: 15rem;
+                    //     background: radial-gradient(hsl(211, 16%, 94%) , #fff);
+                    //     filter: blur(30px);
+                    //     border-radius: 50%;
+                    //     z-index: -1;
+                    // }
 
                 }
                 
@@ -153,13 +163,13 @@
 
 // SKILLS DISPLAY SECTION CONTAINER
 .skill-section-container {
-    // border: 2px solid purple;
+    border: 2px solid yellow;
     // margin-top: 10vh;
     position: relative;
 
-    @include abstracts.md {
-        margin-top: 10vh;
-    }
+    // @include abstracts.md {
+    //     margin-top: 10vh;
+    // }
 
     &.border {
         border: .125rem solid abstracts.$brand;
