--- a/sass/components/_menu-toggle.scss
+++ b/sass/components/_menu-toggle.scss
@@ -23,24 +23,30 @@
     // PULSE = PSEUDO RADIUS WITH ANIMATION
     &.hamburger:after,
     &.hamburger:before {
-        position: absolute;
         content: "";
-        height: 100%;
-        width: 100%;
+        position: absolute;
+        background-color: transparent;
+        inset: 0;
         border-radius: 50%;
-        border: none;
-        outline: none;
-        transition: .25s ease;
+        transition: 250ms ease;
+        z-index: -1;
     }
+
+    // PSEUDO SHADOW
+    &::before {
+        box-shadow: inset 2px 2px 2px #fff2,
+                    inset -2px -2px 2px #0002;
+    }
+
     // PULSE STYLE AND KEYFRAMES 
-    &.hamburger:before {
+    &.hamburger:after {
         border: 1px solid abstracts.$brand;
         opacity: 0;
-        animation: ham-pulse 2500ms ease infinite;
+        animation: ham-pulse 2000ms linear infinite;
         // PULSE KEYFRAMES
         @keyframes ham-pulse {
             50% {
-                opacity: .5;
+                opacity: 1;
             }
 
             100% {
@@ -53,19 +59,22 @@
     // .NO-PULSE = JS ACTIVE CLASS 
     // = REMOVE ANIMATION CLASS
     &.no-pulse {
-        &.hamburger::before {
+        &.hamburger::after {
             animation: none;
             animation-fill-mode: forwards;
         }
     }
+
     // { USER CLICK } ACTIVE PSEUDO CLASS = SCALE ITEM DOWN AND REMOVE ANIMATION
     &:active {
         transform: scale(.8);
-        transition: .25s;  
+        transition: 250ms;
+
         // NO PULSE ON ACTIVE STATE
-        &::before {
+        &::after {
             animation: none;
         } 
+
     }
     
     // HAMBURGER BARS
@@ -73,24 +82,23 @@
         height: .2em;
         width: 1.5em;
         position: relative;
-        background-color: #f4f4f4;
+        background-color: #fff;
         border-radius: 1rem;
         z-index: -1;
         transform-style: preserve-3d;
+
         // TOP AND BOTTOM BARS = PSEUDO ELEMENTS
         &::before,
         &::after {
             content: "";
             position: absolute;
-            height: 100%;
-            width: 100%;
-            left: 0;
-            bottom: 0;
-            background-color: #f4f4f4;
+            inset: 0;
+            background-color: inherit;
             border-radius: inherit;
-            transition: .5s ease;
+            transition: 500ms ease;
             transform-style: preserve-3d;
         }
+        
         // TRANSLATE ELEMENTS = ::BEFORE UP(Y -.5em) & ::AFTER DOWN(Y .5em) 
         &::before {
             transform: translateY(-.5em);
@@ -107,7 +115,7 @@
     // 3. TRANSFORM PSEUDO BARS INTO 'X' SHAPE
         &.active {
             // REMOVE PULSE ANIMATION
-            &::before {
+            &::after {
                 animation: none;
             }
             // TRANSPARENT MIDDLE BAR + THICKER BARS
@@ -118,13 +126,12 @@
                 // TRANSLATE(TRANSLATE 0 & SKEW) BARS TO FORM 'X' SHAPE 
                 &::before {
                     transform: translateY(0) skewY(40deg) ;
-                    background: abstracts.$span-crimson;
+                    background: abstracts.$brand;
                 }
 
                 &::after {
                     transform: translateY(0) skewY(-40deg);
-                    background: abstracts.$span-crimson;
-
+                    background: abstracts.$brand;
                 }
             }
         }
