--- a/sass/components/_menu-toggle.scss
+++ b/sass/components/_menu-toggle.scss
@@ -34,8 +34,8 @@
 
     // PSEUDO SHADOW
     &::before {
-        box-shadow: inset 2px 2px 2px #fff2,
-                    inset -2px -2px 2px #0002;
+        box-shadow: inset 2px 2px 2px hsla(0, 0%, 100%, 0.125),
+                    inset -2px -2px 2px hsla(0, 0%, 0%, 0.125);
     }
 
     // PULSE STYLE AND KEYFRAMES 
@@ -46,7 +46,7 @@
         // PULSE KEYFRAMES
         @keyframes ham-pulse {
             50% {
-                opacity: 1;
+                opacity: 0.8;
             }
 
             100% {
