--- a/sass/components/_menu-toggle.scss
+++ b/sass/components/_menu-toggle.scss
@@ -7,12 +7,11 @@
     width: 3em;
     background: abstracts.$overlay-blue-dark;
 
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    place-items: center;
     
     border-radius: 50%;
+    position: relative;
     isolation: isolate;
     transition: 250ms ease;
 
@@ -43,6 +42,7 @@
         border: 1px solid abstracts.$brand;
         opacity: 0;
         animation: ham-pulse 2000ms linear infinite;
+        
         // PULSE KEYFRAMES
         @keyframes ham-pulse {
             50% {
@@ -54,6 +54,7 @@
                 transform: scale(1.25);
             }
         }
+
     }
     
     // .NO-PULSE = JS ACTIVE CLASS 
@@ -82,10 +83,11 @@
         height: .2em;
         width: 1.5em;
         position: relative;
-        background-color: #fff;
+        background-color: abstracts.$text-light;
         border-radius: 1rem;
         z-index: -1;
         transform-style: preserve-3d;
+        transition: 250ms;
 
         // TOP AND BOTTOM BARS = PSEUDO ELEMENTS
         &::before,
@@ -123,9 +125,11 @@
                 background-color: transparent;
                 transform-style: preserve-3d;
                 height: .3em;
+                transition: 0s;
+
                 // TRANSLATE(TRANSLATE 0 & SKEW) BARS TO FORM 'X' SHAPE 
                 &::before {
-                    transform: translateY(0) skewY(40deg) ;
+                    transform: translateY(0) skewY(40deg);
                     background: abstracts.$brand;
                 }
 
@@ -133,6 +137,7 @@
                     transform: translateY(0) skewY(-40deg);
                     background: abstracts.$brand;
                 }
+
             }
         }
 }
