--- a/sass/layout/_skills.scss
+++ b/sass/layout/_skills.scss
@@ -156,7 +156,7 @@
 
 // SKILLS DISPLAY SECTION CONTAINER
 .skill-section-container {
-    border: 2px solid yellow;
+    border: 2px solid #0005;
     // margin-top: 10vh;
     position: relative;
 
