--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,15 @@ body a {
   text-decoration: none;
   transition: 0.25s;
 }
+body h1, body h2, body h3, body h4, body h5, body h6 {
+  text-wrap: balance;
+}
 body p {
   font-size: 1rem;
   font-size: clamp(1rem, 2vw, 1.125rem);
   font-weight: 400;
   line-height: 1.6;
+  text-wrap: pretty;
 }
 body .icon {
   width: 1.025rem;
@@ -478,10 +482,12 @@ dialog button.modal-btn {
 }
 dialog h3 {
   font-size: 2rem;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 dialog h4 {
-  font-size: 1.5rem;
+  font-size: 1rem;
+  text-transform: capitalize;
+  margin-bottom: 0.5rem;
 }
 dialog p::first-letter {
   text-transform: capitalize;
