--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -19,12 +19,17 @@ body {
         text-decoration: none;
         transition: .25s;
     }
+
+    h1, h2, h3, h4, h5, h6 {
+        text-wrap: balance;
+    }
     
     p {
         font-size: 1rem;
         font-size: abstracts.$font-clamp-sm;
         font-weight: 400;
         line-height: 1.6;
+        text-wrap: pretty;
     }
 
     .icon {
