--- a/sass/components/_dialog.scss
+++ b/sass/components/_dialog.scss
@@ -40,11 +40,13 @@ dialog {
 
     h3 {
         font-size: 2rem;
-        margin-bottom: 1rem;
+        margin-bottom: 2rem;
     }
 
     h4 {
-        font-size: 1.5rem;
+        font-size: 1rem;
+        text-transform: capitalize;
+        margin-bottom: 0.5rem;
     }
 
     p {
