--- a/css/style.css
+++ b/css/style.css
@@ -1768,55 +1768,6 @@ form button:hover::after {
   overflow: hidden;
   isolation: isolate;
 }
-.banner.about-banner {
-  background: #1f252d;
-}
-@media (max-width: 1024px) {
-  .banner.about-banner::after {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background-image: url("../img/shakexblue-min.jpg");
-    background-repeat: no-repeat;
-    mix-blend-mode: overlay;
-    z-index: -1;
-    background-size: contain;
-    background-position: right;
-    opacity: 0.6;
-  }
-}
-@media (max-width: 1024px) and (max-width: 450px) {
-  .banner.about-banner::after {
-    background-size: 100%;
-    background-size: cover;
-    background-position: right;
-    background-position: 0% bottom;
-  }
-}
-@media (min-width: 1024px) {
-  .banner.about-banner {
-    background-attachment: fixed;
-  }
-  .banner.about-banner::after {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background-image: url("../img/shakexblue-min.jpg");
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-    mix-blend-mode: overlay;
-  }
-}
 .banner h1 {
   font-size: 1rem;
   font-size: clamp(.975rem, 1.5vw, 1.05rem);
@@ -1825,7 +1776,6 @@ form button:hover::after {
 }
 .banner h2 {
   font-size: 2rem;
-  font-size: clamp(2rem, 5vw, 2.5rem);
   font-size: clamp(1.5rem, 5vw, 2.5rem);
   letter-spacing: -0.05rem;
 }
@@ -1838,12 +1788,16 @@ form button:hover::after {
 }
 
 .hero {
+  background: linear-gradient(0deg, #000 85%, #15191e);
   color: #f4f4f4;
   text-transform: capitalize;
-  background: #0a0d0f;
-  background: linear-gradient(0deg, #000 60%, #15191e);
-  background: #000;
 }
+@media (min-width: 768px) {
+  .hero {
+    background: linear-gradient(0deg, #000 85%, #15191e);
+  }
+}
+
 .hero-grid {
   height: 100%;
   width: 100%;
@@ -1868,47 +1822,60 @@ form button:hover::after {
     grid-template-rows: 1fr auto;
   }
 }
-.hero-grid .grid-title {
+
+.grid-title {
   grid-area: grid-title;
 }
-.hero-grid .grid-title h1 {
+.grid-title h1 {
   font-weight: 200;
   font-size: 0.95rem;
   font-size: clamp(0.95rem, 1.25vw, 1.025rem);
   cursor: default;
   transition: 250ms;
 }
-.hero-grid .grid-title h2 {
+.grid-title h2 {
   font-size: 2.5rem;
   font-size: clamp(1.5rem, 4vw, 2.5rem);
   text-wrap: balance;
   font-weight: 700;
 }
 @media (min-width: 820px) {
-  .hero-grid .grid-title {
+  .grid-title {
     place-self: center left;
   }
 }
-.hero-grid .grid-title:hover h1 {
+.grid-title:hover h1 {
   font-weight: 500;
 }
-.hero-grid .grid-image {
+
+.grid-image {
   grid-area: grid-image;
+  -webkit-mask: linear-gradient(0deg, transparent, white 30%, white 70%, transparent);
+  mask: linear-gradient(0deg, transparent, white 20%, white 80%, transparent);
 }
-.hero-grid .grid-image img {
+@media (min-width: 820px) {
+  .grid-image {
+    -webkit-mask: linear-gradient(90deg, transparent, white 30%, white 70%, transparent);
+    mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+  }
+}
+.grid-image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  z-index: 10;
+  opacity: 0.85;
 }
-.hero-grid .grid-subtitle {
+
+.grid-subtitle {
   grid-area: grid-subtitle;
 }
-.hero-grid .grid-subtitle .btn {
+.grid-subtitle .btn {
   margin: 1rem 0 0;
   width: 10.5rem;
   width: clamp(10.5rem, 25vw, 12rem);
 }
-.hero-grid .grid-subtitle .btn .icon {
+.grid-subtitle .btn .icon {
   width: 0.95rem;
   width: clamp(0.95rem, 2vw, 1rem);
 }
