--- a/sass/layout/_skills.scss
+++ b/sass/layout/_skills.scss
@@ -137,11 +137,15 @@
                     fill: abstracts.$overlay-blue-darker;
                     transition: 250ms;
                     filter: drop-shadow(.25rem .5rem .5rem hsla(212, 19%, 20%, .2));
-                    cursor: pointer;
+                    cursor: default;
+
+                    @include abstracts.sm {
+                        cursor: pointer;
+                    }
 
                     &:hover {
                         transform: scale(1.05);
-                        filter: drop-shadow(.125rem .25rem .25rem hsla(212, 19%, 20%, .5));
+                        filter: drop-shadow(.125rem .25rem .25rem hsla(212, 19%, 20%, .45));
                     }
                 }
 
