--- a/css/style.css
+++ b/css/style.css
@@ -2568,8 +2568,6 @@ form button:hover::after {
 .work {
   min-height: 100vh;
   padding: 10vh 5vw 10vh;
-  background: #f4f4f4;
-  background: #fafafa;
   background: #ececec;
 }
 @media (min-width: 768px) {
@@ -2579,9 +2577,9 @@ form button:hover::after {
 }
 .work .work-intro h3 {
   text-transform: capitalize;
+  text-align: center;
   font-size: 1.8rem;
   font-size: clamp(1.8rem, 4vw, 2rem);
-  text-align: center;
   position: relative;
   width: max-content;
   margin-inline: auto;
@@ -2631,6 +2629,11 @@ form button:hover::after {
   box-shadow: 0rem 0.5rem 1rem rgba(0, 0, 0, 0.1);
   position: relative;
   margin-bottom: 10vh;
+}
+@media (min-width: 576px) {
+  .work .work-container .item {
+    padding: 0.5rem;
+  }
 }
 @media (min-width: 768px) {
   .work .work-container .item {
@@ -2776,18 +2779,18 @@ form button:hover::after {
   }
 }
 .work .work-container .item .item-header .item-cta a {
-  padding: 0.65rem 1rem;
-  text-transform: capitalize;
-  font-size: 0.95rem;
-  font-size: clamp(.95rem, 1vw, 1.15rem);
-  border-radius: 0.25rem;
-  width: 100%;
-  text-align: center;
-  letter-spacing: 0.025rem;
-  transition: 0.25s;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 0.65rem 1rem;
+  width: 100%;
+  text-transform: capitalize;
+  text-align: center;
+  letter-spacing: 0.025rem;
+  font-size: 0.95rem;
+  font-size: clamp(.95rem, 1vw, 1.15rem);
+  border-radius: 0.25rem;
+  transition: 0.25ms;
 }
 @media (max-width: 450px) {
   .work .work-container .item .item-header .item-cta a {
@@ -2813,12 +2816,9 @@ form button:hover::after {
 .work .work-container .item .item-header .item-cta a.cta-primary::after, .work .work-container .item .item-header .item-cta a.cta-primary::before {
   content: "";
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  inset: 0;
   border-radius: 0.25rem;
-  transition: 0.25s ease;
+  transition: 250ms ease;
   z-index: -1;
 }
 .work .work-container .item .item-header .item-cta a.cta-primary::before {
@@ -2833,9 +2833,6 @@ form button:hover::after {
 .work .work-container .item .item-header .item-cta a.cta-secondary {
   border: 1px solid #29323d;
   color: #1f252d;
-}
-.work .work-container .item .item-header .item-cta a.cta-secondary i {
-  font-weight: 600;
 }
 @media (min-width: 768px) {
   .work .work-container .item .item-header .item-cta a:hover {
@@ -2873,22 +2870,41 @@ form button:hover::after {
 @media (min-width: 820px) {
   .work .work-container .item .item-content {
     width: 50%;
-    padding: 2rem;
   }
 }
 .work .work-container .item .item-content .item-image {
-  border-radius: 0.25rem;
-  overflow: hidden;
   width: 100%;
   height: 100%;
+  transform: scale(1.1);
+  transition: 250ms;
+  border-radius: 0.25rem;
+  position: relative;
+  isolation: isolate;
+}
+.work .work-container .item .item-content .item-image::after {
+  content: "";
+  position: absolute;
+  inset: 0;
   box-shadow: 0 0.25rem 0.5rem rgba(71, 84, 98, 0.35);
+  opacity: 0;
+  border-radius: inherit;
+  transition: 250ms;
 }
 .work .work-container .item .item-content .item-image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 0.25rem;
   object-position: center;
-  transition: 0.25s;
+  transition: 350ms;
+}
+@media (min-width: 768px) {
+  .work .work-container .item .item-content .item-image {
+    transform: scale(1.125);
+  }
+  .work .work-container .item .item-content .item-image img {
+    border-radius: 0;
+  }
 }
 @media (max-width: 820px) {
   .work .work-container .item.io-item {
@@ -2919,6 +2935,19 @@ form button:hover::after {
   .work .work-container .item.active-item .item-content {
     opacity: 1;
     transform: translateX(0);
+  }
+}
+.work .work-container .item:hover .item-content .item-image {
+  transform: scale(1);
+  transition: 500ms;
+}
+.work .work-container .item:hover .item-content .item-image::after {
+  opacity: 1;
+  transition: 500ms ease-out;
+}
+@media (min-width: 768px) {
+  .work .work-container .item:hover .item-content img {
+    border-radius: 0.25rem;
   }
 }
 
