--- a/sass/layout/_skills.scss
+++ b/sass/layout/_skills.scss
@@ -160,13 +160,9 @@
 
 // SKILLS DISPLAY SECTION CONTAINER
 .skill-section-container {
-    border: 2px solid #0005;
-    // margin-top: 10vh;
+    // border: 2px solid #0005;
+    border-bottom: .125rem solid abstracts.$brand;
     position: relative;
-
-    // @include abstracts.md {
-    //     margin-top: 10vh;
-    // }
 
     &.border {
         border: .125rem solid abstracts.$brand;
