--- a/sass/layout/_skills.scss
+++ b/sass/layout/_skills.scss
@@ -1,7 +1,7 @@
 @use '../abstracts';
 // SKILLS SECTION
 .skills-section {
-    padding: 10vh 0 5vh;
+    padding: 10vh 0 0;
     background: linear-gradient(25deg, #ececec 25%, #fff 40%);
 
     // DESKTOP BACKGROUND
